# KiddoQuest

./: CMakeLists.txt  CMakeLists.txt.user.43b8c25  CMakeLists.txt.user.dcb6aec  README.md  allgameswindow.cpp  allgameswindow.h  allgameswindow.ui  allgameswindow.ui.autosave  animalspeller_game.cpp  animalspeller_game.h  animalspeller_game.ui  backgroundmusicmanager.cpp  backgroundmusicmanager.h  country.cpp  country.h  easyplusminus_game.cpp  easyplusminus_game.h  easyplusminus_game.ui  email.cpp  email.h  englishwindow.cpp  englishwindow.h  englishwindow.ui  flaggle.cpp  flaggle.h  flaggle_game.cpp  flaggle_game.h  flaggle_game.ui  foodspeller_game.cpp  foodspeller_game.h  foodspeller_game.ui  gamecomplete.cpp  gamecomplete.h  gamecomplete.ui  geographywindow.cpp  geographywindow.h  geographywindow.ui  geographywindow.ui.autosave  guesscountry_game.cpp  guesscountry_game.h  (+99 more)
Speller/: CMakeLists.txt  animalSpeller_game.cpp  animalspeller_game.h  animalspeller_game.ui  englishwindow.cpp  englishwindow.h  englishwindow.ui  foodspeller_game.cpp  foodspeller_game.h  foodspeller_game.ui  gamecomplete.ui  jobspeller_game.cpp  jobspeller_game.h  jobspeller_game.ui  main.cpp  objects.h  placespeller_game.cpp  placespeller_game.ui  placesspeller_game.cpp  thingspeller_game.cpp  thingspeller_game.ui
analogClock/: CMakeLists.txt  CMakeLists.txt.user.dc1d95c  analogclock.cpp  analogclock.h  analogclock.ui  gamecomplete.h  gamecomplete.ui  main.cpp
